<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:paddingLeft="@dimen/margen_horizontal_actividad"
    android:paddingTop="@dimen/margen_vertical_actividad"
    android:paddingRight="@dimen/margen_horizontal_actividad"
    android:paddingBottom="@dimen/margen_vertical_actividad"
    tools:context=".Resultado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/mensajeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_horizontal"
            android:text="@string/felicidades"
            android:textAlignment="center"
            android:textColor="@color/casi_blanco"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animacionLottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="326dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/victory" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mensajePuntoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="right"
                    android:text="@string/jugador"
                    android:textColor="@color/casi_blanco"
                    android:textSize="30sp"
                    tools:ignore="NestedWeights,RtlHardcoded" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <TextView
                    android:id="@+id/jugadorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="left"
                    android:textColor="@color/casi_blanco"
                    android:textSize="33sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5sp"
                android:layout_weight="1"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/menuBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu"
                android:text="@string/boton_menu"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

